ingress/pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: app1
 labels:
  name: app1
spec:
 containers:
 - name: http-echo
   image: jxlwqq/http-echo
   args:
     - "--text=hello world 1"
     - "--addr=:8000"

---

apiVersion: v1
kind: Pod
metadata:
 name: app2
 labels:
  name: app2
spec:
 containers:
 - name: http-echo
   image: jxlwqq/http-echo
   args:
     - "--text=hello world 2"
     - "--addr=:8000"
